<resources>
    <string name="app_name">Movie</string>
    <string name="des">The work of billionaire tech CEO Donovan Chalmers is so valuable that he hires mercenaries to protect it, and a terrorist group kidnaps his daughter just to get it.</string>
    <string name="title">The SpongeBob</string>

    <string name="hello_blank_fragment">Hello detail fragment</string>
    <string name="reviews">Review</string>
    <string name="time">1h 59min</string>
    <string name="review">189 Review</string>
    <string name="name_movie">Dunkirk</string>
    <string name="create_year">(2017)</string>
    <string name="action">ACTION</string>
    <string name="drama">DRAMA</string>
    <string name="history">HISTORY</string>
    <string name="todo">TODO</string>
    <string name="text_status_finish">Finish</string>
</resources>