<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="isLoading"
            type="Boolean" />
        <variable
            name="content"
            type="String" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/ct_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Black"
        tools:context=".ui.detail.DetailFragment"
        tools:showPaths="true">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/Aqua"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="TODO" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            app:layout_constraintStart_toStartOf="@id/poster"
            app:layout_constraintTop_toTopOf="@id/poster"
            android:contentDescription="TODO" />

        <ImageView
            android:id="@id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_system_update_alt_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/poster"
            android:contentDescription="TODO" />

        <TextView
            android:layout_marginStart="8dp"
            android:id="@+id/name_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/name_movie"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/back"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintBottom_toBottomOf="@id/back"
            />

        <ImageView
            android:rotation="180"
            app:layout_constraintBottom_toBottomOf="@id/drama"
            android:src="@drawable/ic_baseline_navigation_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/directional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/create_year"
            android:textColor="@color/White"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/image"
            app:layout_constraintBottom_toBottomOf="@id/image"
            app:layout_constraintEnd_toStartOf="@id/image"/>

        <TextView
            android:alpha="0"
            android:id="@+id/action"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_text"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/action"
            android:textColor="@color/White"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_movie" />

        <TextView
            android:alpha="0"
            android:id="@+id/drama"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_text"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/drama"
            android:textColor="@color/White"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/action"
            app:layout_constraintTop_toBottomOf="@id/name_movie" />

        <TextView
            android:alpha="0"
            android:id="@+id/history"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_text"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/history"
            android:textColor="@color/White"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/drama"
            app:layout_constraintTop_toBottomOf="@id/name_movie" />

        <FrameLayout
            android:visibility="gone"
            android:id="@+id/frame"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@id/poster"
            app:layout_constraintEnd_toEndOf="@id/poster"
            app:layout_constraintStart_toStartOf="@id/poster"
            app:layout_constraintTop_toTopOf="@id/poster">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_active"
                android:src="@drawable/ic_baseline_play_arrow_24" />
        </FrameLayout>

        <TextView
            android:id="@+id/dess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/reviews"
            android:textColor="@color/White"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/poster" />

        <ScrollView
            android:id="@+id/scroll_des"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dess">

            <TextView
                android:id="@+id/des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="2dp"
                android:scrollbars="vertical"
                android:text="@{content}"
                android:textColor="@color/White"
                android:textSize="16sp" />
        </ScrollView>
    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>