<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.movie.model.MovieData" />

        <variable
            name="movie"
            type="MovieData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ct_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:padding="4dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:background="@drawable/border_text"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:hint="@string/title"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:text="@{movie.title}"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cv_image"
            app:layout_constraintTop_toTopOf="@id/cv_image" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:hint="@string/time"
            android:textColor="@color/White"
            android:textColorHint="@color/White"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cv_image"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/des"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:paddingEnd="10dp"
            android:text="@{movie.overview}"
            android:textColor="#fff"
            android:textColorHint="@color/White"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cv_image"
            app:layout_constraintTop_toBottomOf="@id/time"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rating"
            android:rating="@{movie.vote_average}"
            android:stepSize="0.5"
            android:numStars="10"
            style="@android:style/Widget.Material.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:progressTint="@color/Yellow"
            android:progressBackgroundTint="@color/Aqua"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="@id/cv_image"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toEndOf="@id/cv_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>